# lpx

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  pinact.yaml  release.yml
img/: demo.tape  detail.tape  inline.tape  loop.tape  notice.md  speed.tape
src/: app.rs  config.rs  event.rs  image.rs  macros.rs  main.rs  player.rs  protocol.rs
