[package]
name = "lpx"
version = "0.1.0"
description = "Terminal Animated GIF Viewer"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
homepage = "https://github.com/lusingander/lpx"
repository = "https://github.com/lusingander/lpx"
readme = "README.md"
license = "MIT"
keywords = ["gif", "animation", "cli", "tui", "terminal"]
categories = ["command-line-utilities"]
edition = "2024"
rust-version = "1.90.0"

exclude = ["/.github", "/img"]

[dependencies]
base64 = "0.22.1"
bytemuck = "1.25.0"
clap = { version = "4.6.0", features = ["derive"] }
gif = "0.14.1"
gif-dispose = "6.0.0"
humansize = "2.1.3"
image = { version = "0.25.10", features = ["png"] }
ratatui = "0.30.0"
rayon = "1.11.0"
smart-default = "0.7.1"
unicode-width = "0.2.2"
